--- a/src/app/student-list/student-list.component.html
+++ b/src/app/student-list/student-list.component.html
@@ -1,1 +1,70 @@
-<p>student-list works!</p>
+<div class="row" style="margin-top: 10px">
+    <div class="column-left"><h1 style="padding-top:10px; padding-left: 20px;">Student List</h1></div>
+    <div class="column-right">
+        <button mat-raised-button style="float: right;" color="primary" (click)="openEditDialog(undefined, 'create')">
+            Add Student
+        </button>
+    </div>
+</div>
+<div class="row" style="margin-top: 10px">
+    <div class="column-left">
+        <h2 style="padding-left: 20px; color:#777777">Filter</h2>
+        <form [formGroup]="filterForm" style="padding-left: 20px;" (ngSubmit)="filterOnSubmit()">
+            <mat-label>Filter by Matric Code</mat-label>
+            <br>
+            <mat-form-field style="margin-top:10px;">
+                <mat-label>Matriculation Number</mat-label>
+                <input matInput formControlName="matriculation_number">
+            </mat-form-field>
+            <br>
+            <mat-label>Filter by Name</mat-label>
+            <br>
+            <mat-form-field style="margin-top:10px;">
+                <mat-label>Name</mat-label>
+                <input matInput formControlName="name">
+            </mat-form-field>
+            <br>
+            <mat-label>Filter by Year</mat-label>
+            <br>
+            <mat-form-field style="margin-top:10px;">
+                <mat-label>Year</mat-label>
+                <input matInput formControlName="year">
+            </mat-form-field>
+            <br>
+            <mat-label>Filter by Course</mat-label>
+            <br>
+            <mat-form-field style="margin-top:10px;">
+                <mat-label>Course</mat-label>
+                <input matInput  formControlName="course">
+            </mat-form-field>
+            <br>
+
+            <button type="submit" mat-raised-button color="primary" [disabled]="!filterForm.valid">
+                Filter
+            </button>
+        </form>
+    </div>
+    <div class="column-right">
+        <mat-table [dataSource]="students" matSort class="mat-elevation-z8">
+            <ng-container matColumnDef="matriculation_number">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Matric ID</mat-header-cell>
+                <mat-cell *matCellDef="let cell">{{cell.matriculation_number}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="name">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+                <mat-cell *matCellDef="let cell">{{cell.name}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="year">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Year</mat-header-cell>
+                <mat-cell *matCellDef="let cell">{{cell.year}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="course">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Course</mat-header-cell>
+                <mat-cell *matCellDef="let cell">{{cell.course}}</mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="tableColumns"></mat-header-row>
+            <mat-row matRipple *matRowDef="let cell; columns: tableColumns;" (click)="openEditDialog(cell, 'edit')"></mat-row>
+        </mat-table>
+        <mat-paginator class="mat-elevation-z8" [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
+    </div>
+</div>
